@@ -4,7 +4,7 @@ use warnings;
 use 5.014;
 use utf8;
 
-our $VERSION = '1.93';
+our $VERSION = '1.94';
 
 use DateTime;
 use DateTime::Format::Strptime;
@@ -587,7 +587,7 @@ B<db-iris> [B<-rx>] [B<-d> I<date>] [B<-o> I<output-flags>]
 
 =head1 VERSION
 
-version 1.93
+version 1.94
 
 =head1 DESCRIPTION
 
@@ -858,7 +858,7 @@ There are no known bugs at the moment.
 
 =head1 AUTHOR
 
-Copyright (C) 2013-2023 by Birte Kristina Friesel E<lt>derf@finalrewind.orgE<gt>
+Copyright (C) 2013-2024 by Birte Kristina Friesel E<lt>derf@finalrewind.orgE<gt>
 
 The station data used by this script is provided by DB
 Station&Service AG, Europaplatz 1, 10557 Berlin, Germany and available
